objects/INX_Instance__c.object
<CustomObject>
    <description>Stores instances created in Infinit</description>
    <fields>
        <fullName>INX_Branch__c</fullName>
        <label>Branch</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INX_Credentials__c</fullName>
        <label>Credentials</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>INX_Deployment_Settings__c</fullName>
        <label>Deployment settings</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>INX_Endpoint__c</fullName>
        <label>Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INX_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>INX_Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>INX_Jira_Settings__c</fullName>
        <label>Jira settings</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>INX_OrgId__c</fullName>
        <label>OrgId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INX_Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent</label>
        <referenceTo>INX_Instance__c</referenceTo>
        <relationshipLabel>Child Instances</relationshipLabel>
        <relationshipName>ChildInstances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>INX_Promote_Settings__c</fullName>
        <label>Promote settings</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>INX_Repository__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Repository</label>
        <referenceTo>INX_Repository__c</referenceTo>
        <relationshipLabel>Instances</relationshipLabel>
        <relationshipName>Instances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>INX_Share_Credentials__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Share credentials</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>INX_Username__c</fullName>
        <label>Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INX_Version__c</fullName>
        <label>Version</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <label>Instance</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>INX_Version__c</columns>
        <columns>INX_Is_Active__c</columns>
        <columns>INX_Endpoint__c</columns>
        <columns>INX_OrgId__c</columns>
        <columns>INX_Share_Credentials__c</columns>
        <columns>INX_Branch__c</columns>
        <columns>INX_Parent__c</columns>
        <filterScope>Mine</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Instance Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Instances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>